--- a/apps/todos/src/app/app.component.html
+++ b/apps/todos/src/app/app.component.html
@@ -7,3 +7,6 @@
   />
 </div>
 <div>Message: {{ hello$ | async | json }}</div>
+
+<button (click)="click()">click</button>
+<div>Message: {{ res$ | async | json }}</div>
