--- a/apps/todos/src/app/modules/add-edit-todo-form/add-edit-todo-form.component.html
+++ b/apps/todos/src/app/modules/add-edit-todo-form/add-edit-todo-form.component.html
@@ -1,7 +1,7 @@
-<ng-template #content let-dismiss="dismiss">
+<ng-template #content>
   <div class="modal-header">
     <h4 class="modal-title">{{editMode ? "Edit" : "Add" }} Todo</h4>
-    <button type="button" class="close" aria-label="Close" (click)="dismiss()">
+    <button type="button" class="close" aria-label="Close" (click)="closeAddTodoForm()">
       <span aria-hidden="true">&times;</span>
     </button>
   </div>
@@ -32,7 +32,7 @@
     </div>
 
     <div class="modal-footer">
-      <button type="button" class="btn btn-light" (click)="dismiss()">Close</button>
+      <button type="button" class="btn btn-light" (click)="closeAddTodoForm()">Close</button>
       <button type="confirm" [disabled]="todoForm.invalid" class="btn btn-primary">
         {{editMode ? "Edit" : "Add" }} Todo
       </button>
