onPush strategy for add-edit-todo-form

--- a/apps/todos/src/app/features/todos/containers/todos-container/todos.component.html
+++ b/apps/todos/src/app/features/todos/containers/todos-container/todos.component.html
@@ -1,8 +1,9 @@
 <ul *ngIf="todos?.length" class="list-group">  
   <ng-container *ngFor="let todo of todos; trackBy:todoIdentify">
-    <learning-workspace-todo-item [todo]="todo" (todoAction)="todoActionRun($event, todo.id)">
-
-    </learning-workspace-todo-item>
+    <learning-workspace-todo-item 
+      [todo]="todo" 
+      (todoAction)="todoActionRun($event, todo.id)"
+    ></learning-workspace-todo-item>
   </ng-container>
 </ul>
 
@@ -13,7 +14,5 @@
     [editMode]="editMode"
     [todoForEdit]="selectedTodo"
     (addEditFormEvent)="afterCloseAddEditTodoForm($event)"
-    >
-
-  </learning-workspace-add-edit-todo-form>
+  ></learning-workspace-add-edit-todo-form>
 </ng-container>
