--- a/apps/todos/src/app/features/todos/containers/todos-container/todos.component.html
+++ b/apps/todos/src/app/features/todos/containers/todos-container/todos.component.html
@@ -1,3 +1,5 @@
+<learning-workspace-search></learning-workspace-search>
+
 <ul *ngIf="todos?.length" class="list-group">  
   <ng-container *ngFor="let todo of todos; trackBy:todoIdentify">
     <learning-workspace-todo-item 
