--- a/apps/todos/src/app/modules/search-new/search-new.component.html
+++ b/apps/todos/src/app/modules/search-new/search-new.component.html
@@ -1,6 +1,6 @@
 <form class="pb-4 d-flex align-items-center" [formGroup]="searchForm">
   <div class="mr-2">
-    <label class="mr-2" for="searchQuery">Search: </label>
+    <label class="mr-2" for="searchQuery">Search new: </label>
     <input id="searchQuery" type="text" formControlName="search">
   </div>
 </form>
