--- a/apps/todos/src/app/modules/search-new/search-new.component.html
+++ b/apps/todos/src/app/modules/search-new/search-new.component.html
@@ -1,4 +1,4 @@
-<form class="pb-4 d-flex align-items-center" [formGroup]="searchForm">
+<form class="pb-4 d-flex align-items-center" [formGroup]="searchForm" #search>
   <div class="mr-2">
     <label class="mr-2" for="searchQuery">Search new: </label>
     <input id="searchQuery" type="text" formControlName="search">
