backend login logout register

--- a/apps/todos/src/app/modules/about/about.component.html
+++ b/apps/todos/src/app/modules/about/about.component.html
@@ -1,2 +1,9 @@
-<p>about works!</p>
+<p>Hello {{ user?.name}}</p>
+
 <a routerLink="/todos">Go to todos page</a>
+<br>
+<button (click)='register()'>REGISTER</button>
+<br>
+<button (click)='login()'>LOGIN</button>
+<br>
+<button (click)='logout()'>LOGOUT</button>
