fix doubl fetch

--- a/apps/todos/src/app/features/auth/containers/auth/auth.component.html
+++ b/apps/todos/src/app/features/auth/containers/auth/auth.component.html
@@ -1,5 +1,5 @@
 <div class="d-flex align-items-center ">
-  <p class="m-0 mr-2">Hello {{ user?.name}}</p>
+  <p class="m-0 mr-2">Hello {{ userName | titlecase }}</p>
   <button (click)="openAuthForm()">{{isLoggedIn ? "Logout": "Login"}}</button>
 </div>
 
