--- a/apps/todos/src/app/features/auth/components/login-form/login-form.component.html
+++ b/apps/todos/src/app/features/auth/components/login-form/login-form.component.html
@@ -1,23 +1,30 @@
 <ng-template #form>
   <form [formGroup]="loginForm" (ngSubmit)="submitLoginForm()" class="modal-body">
-    <div>
-      <label for="email">Email: </label>
-      <input
-        id="email" 
-        type="email"
-        formControlName="email"
-        placeholder="name@mail.com"
-      >
+    <div class="modal-header">
+      <h5 class="modal-title">Modal title</h5>
+      <button type="button" class="btn-close" (click)="closeForm()">X</button>
     </div>
 
-    <div>
-      <label for="password">Password: </label>
-      <input
-        id="password"
-        type="password"
-        formControlName="password"
-        placeholder="password"
-      >
+    <div class="modal-body">
+      <div>
+        <label for="email">Email: </label>
+        <input
+          id="email" 
+          type="email"
+          formControlName="email"
+          placeholder="name@mail.com"
+        >
+      </div>
+
+      <div>
+        <label for="password">Password: </label>
+        <input
+          id="password"
+          type="password"
+          formControlName="password"
+          placeholder="password"
+        >
+      </div>
     </div>
 
     <div class="modal-footer">
