--- a/apps/todos/src/app/features/auth/components/registration-form/registration-form.component.html
+++ b/apps/todos/src/app/features/auth/components/registration-form/registration-form.component.html
@@ -1,43 +1,50 @@
 <ng-template #form>
-  <form [formGroup]="registerForm" (ngSubmit)="submitRegisterForm()" class="modal-body">
-    <div>
-      <label for="name">Name: </label>
-      <input
-        id="name" 
-        type="text"
-        formControlName="name"
-        placeholder="Name"
-      >
+  <form [formGroup]="registerForm" (ngSubmit)="submitRegisterForm()">
+    <div class="modal-header">
+      <h5 class="modal-title">Modal title</h5>
+      <button type="button" class="btn-close" (click)="closeForm()">X</button>
     </div>
 
-    <div>
-      <label for="email">Email: </label>
-      <input
-        id="email" 
-        type="email"
-        formControlName="email"
-        placeholder="name@mail.com"
-      >
-    </div>
+    <div class="modal-body">
+      <div>
+        <label for="name">Name: </label>
+        <input
+          id="name" 
+          type="text"
+          formControlName="name"
+          placeholder="Name"
+        >
+      </div>
 
-    <div>
-      <label for="password">Password: </label>
-      <input
-        id="password"
-        type="password"
-        formControlName="password"
-        placeholder="password"
-      >
-    </div>
+      <div>
+        <label for="email">Email: </label>
+        <input
+          id="email" 
+          type="email"
+          formControlName="email"
+          placeholder="name@mail.com"
+        >
+      </div>
 
-    <div>
-      <label for="confirm-password">Confirm password: </label>
-      <input
-        id="confirm-password"
-        type="password"
-        formControlName="confirmPassword"
-        placeholder="confirm password"
-      >
+      <div>
+        <label for="password">Password: </label>
+        <input
+          id="password"
+          type="password"
+          formControlName="password"
+          placeholder="password"
+        >
+      </div>
+
+      <div>
+        <label for="confirm-password">Confirm password: </label>
+        <input
+          id="confirm-password"
+          type="password"
+          formControlName="confirmPassword"
+          placeholder="confirm password"
+        >
+      </div>
     </div>
 
     <div class="modal-footer">
