--- a/apps/todos/src/app/features/auth/components/login-form/login-form.component.html
+++ b/apps/todos/src/app/features/auth/components/login-form/login-form.component.html
@@ -1,40 +1,32 @@
-<ng-template #form>
-  <form [formGroup]="loginForm" (ngSubmit)="submitLoginForm()" class="modal-body">
-    <div class="modal-header">
-      <h5 class="modal-title">Modal title</h5>
-      <button type="button" class="btn-close" (click)="closeForm()">X</button>
-    </div>
+<form [formGroup]="form" (ngSubmit)="submitForm()">
+  <div>
+    <label for="email">Email: </label>
+    <input
+      id="email" 
+      type="email"
+      formControlName="email"
+      placeholder="name@mail.com"
+    >
+  </div>
 
-    <div class="modal-body">
-      <div>
-        <label for="email">Email: </label>
-        <input
-          id="email" 
-          type="email"
-          formControlName="email"
-          placeholder="name@mail.com"
-        >
-      </div>
+  <div>
+    <label for="password">Password: </label>
+    <input
+      id="password"
+      type="password"
+      formControlName="password"
+      placeholder="password"
+    >
+  </div>
 
-      <div>
-        <label for="password">Password: </label>
-        <input
-          id="password"
-          type="password"
-          formControlName="password"
-          placeholder="password"
-        >
-      </div>
-    </div>
+  <div class="mt-3 modal-footer">
+    <button type="button" class="btn btn-light" (click)="resetForm()">Reset</button>
+    <button 
+      type="confirm"
+      [disabled]="form.invalid || form.untouched"
+      class="btn btn-primary"
+      [textContent]='formLabel'
+    ></button>
+  </div>
+</form>
 
-    <div class="modal-footer">
-      <button type="button" class="btn btn-light" (click)="closeForm()">Close</button>
-      <button 
-        type="confirm"
-        [disabled]="loginForm.invalid && loginForm.untouched"
-        class="btn btn-primary"
-        [textContent]='formLabel'
-      ></button>
-    </div>
-  </form>
-</ng-template>
