--- a/apps/todos/src/app/features/auth/components/registration-form/registration-form.component.html
+++ b/apps/todos/src/app/features/auth/components/registration-form/registration-form.component.html
@@ -1,60 +1,51 @@
-<ng-template #form>
-  <form [formGroup]="registerForm" (ngSubmit)="submitRegisterForm()">
-    <div class="modal-header">
-      <h5 class="modal-title">Modal title</h5>
-      <button type="button" class="btn-close" (click)="closeForm()">X</button>
-    </div>
+<form [formGroup]="form" (ngSubmit)="submitForm()">
+  <div>
+    <label for="name">Name: </label>
+    <input
+      id="name" 
+      type="text"
+      formControlName="name"
+      placeholder="Name"
+    >
+  </div>
 
-    <div class="modal-body">
-      <div>
-        <label for="name">Name: </label>
-        <input
-          id="name" 
-          type="text"
-          formControlName="name"
-          placeholder="Name"
-        >
-      </div>
+  <div>
+    <label for="email">Email: </label>
+    <input
+      id="email" 
+      type="email"
+      formControlName="email"
+      placeholder="name@mail.com"
+    >
+  </div>
 
-      <div>
-        <label for="email">Email: </label>
-        <input
-          id="email" 
-          type="email"
-          formControlName="email"
-          placeholder="name@mail.com"
-        >
-      </div>
+  <div>
+    <label for="password">Password: </label>
+    <input
+      id="password"
+      type="password"
+      formControlName="password"
+      placeholder="password"
+    >
+  </div>
 
-      <div>
-        <label for="password">Password: </label>
-        <input
-          id="password"
-          type="password"
-          formControlName="password"
-          placeholder="password"
-        >
-      </div>
+  <div>
+    <label for="confirm-password">Confirm password: </label>
+    <input
+      id="confirm-password"
+      type="password"
+      formControlName="confirmPassword"
+      placeholder="confirm password"
+    >
+  </div>
 
-      <div>
-        <label for="confirm-password">Confirm password: </label>
-        <input
-          id="confirm-password"
-          type="password"
-          formControlName="confirmPassword"
-          placeholder="confirm password"
-        >
-      </div>
-    </div>
-
-    <div class="modal-footer">
-      <button type="button" class="btn btn-light" (click)="closeForm()">Close</button>
-      <button 
-        type="confirm"
-        [disabled]="registerForm.invalid"
-        class="btn btn-primary"
-        [textContent]='formLabel'
-      ></button>
-    </div>
-  </form>
-</ng-template>
+  <div class="modal-footer">
+    <button type="button" class="btn btn-light" (click)="resetForm()">Reset</button>
+    <button 
+      type="confirm"
+      [disabled]="form.invalid || form.untouched"
+      class="btn btn-primary"
+      [textContent]='formLabel'
+    ></button>
+  </div>
+</form>
