--- a/apps/todos/src/app/features/todos/containers/todos/todos.component.html
+++ b/apps/todos/src/app/features/todos/containers/todos/todos.component.html
@@ -24,5 +24,10 @@
     [editMode]="editMode"
     [todoForEdit]="selectedTodo"
     (addEditFormEvent)="afterCloseAddEditTodoForm($event)"
+    [html]='html'
   ></learning-workspace-add-edit-todo-form>
 </ng-container>
+
+<ng-template #html>
+  TEST HTML
+</ng-template>
