--- a/apps/todos/src/app/modules/add-edit-todo-form/add-edit-todo-form.component.html
+++ b/apps/todos/src/app/modules/add-edit-todo-form/add-edit-todo-form.component.html
@@ -37,5 +37,7 @@
         {{editMode ? "Edit" : "Add" }} Todo
       </button>
     </div>
+    
+    <div [ngTemplateOutlet]='html'></div>
   </form>
 </ng-template>
