--- a/apps/todos/src/app/features/auth/components/login-form/login-form.component.html
+++ b/apps/todos/src/app/features/auth/components/login-form/login-form.component.html
@@ -1,27 +1,33 @@
 <form [formGroup]="form" (ngSubmit)="submitForm()">
-  <div>
-    <label for="email">Email: </label>
-    <input
-      id="email" 
-      type="email"
-      formControlName="email"
-      placeholder="name@mail.com"
-    >
+  <div class="mb-3 row">
+    <label for="email" class="col-sm-4 col-form-label">Email: </label>
+    <div class="col-sm-8">
+      <input
+        class="form-control"
+        id="email" 
+        type="email"
+        formControlName="email"
+        placeholder="name@mail.com"
+      >
+    </div>
   </div>
 
-  <div>
-    <label for="password">Password: </label>
-    <input
-      id="password"
-      type="password"
-      formControlName="password"
-      placeholder="password"
-    >
+  <div class="mb-3 row">
+    <label for="password" class="col-sm-4 col-form-label">Password: </label>
+    <div class="col-sm-8">
+      <input
+        class="form-control"
+        id="password"
+        type="password"
+        formControlName="password"
+        placeholder="password"
+      >
+    </div>
   </div>
 
   <div class="mt-3 modal-footer">
-    <button type="button" class="btn btn-light" (click)="resetForm()">Reset</button>
-    <button 
+    <button type="reset" class="btn btn-light" (click)="resetForm()">Reset</button>
+    <button
       type="confirm"
       [disabled]="form.invalid || form.untouched"
       class="btn btn-primary"
