--- a/apps/todos/src/app/features/auth/components/registration-form/registration-form.component.html
+++ b/apps/todos/src/app/features/auth/components/registration-form/registration-form.component.html
@@ -1,47 +1,59 @@
 <form [formGroup]="form" (ngSubmit)="submitForm()">
-  <div>
-    <label for="name">Name: </label>
-    <input
-      id="name" 
-      type="text"
-      formControlName="name"
-      placeholder="Name"
-    >
+  <div class="mb-3 row">
+    <label for="name" class="col-sm-4 col-form-label">Name:</label>
+    <div class="col-sm-8">
+      <input
+        class="form-control"
+        id="name" 
+        type="text"
+        formControlName="name"
+        placeholder="Name"
+      >
+    </div>
   </div>
 
-  <div>
-    <label for="email">Email: </label>
-    <input
-      id="email" 
-      type="email"
-      formControlName="email"
-      placeholder="name@mail.com"
-    >
+  <div class="mb-3 row">
+    <label for="email" class="col-sm-4 col-form-label">Email:</label>
+    <div class="col-sm-8">
+      <input
+        class="form-control"
+        id="email" 
+        type="email"
+        formControlName="email"
+        placeholder="name@mail.com"
+      >
+    </div>
   </div>
 
-  <div>
-    <label for="password">Password: </label>
-    <input
-      id="password"
-      type="password"
-      formControlName="password"
-      placeholder="password"
-    >
+  <div class="mb-3 row">
+    <label for="password" class="col-sm-4 col-form-label">Password:</label>
+    <div class="col-sm-8">
+      <input
+        class="form-control"
+        id="password"
+        type="password"
+        formControlName="password"
+        placeholder="password"
+      >
+    </div>
   </div>
 
-  <div>
-    <label for="confirm-password">Confirm password: </label>
-    <input
-      id="confirm-password"
-      type="password"
-      formControlName="confirmPassword"
-      placeholder="confirm password"
-    >
+  <div class="mb-3 row">
+    <label for="confirm-password" class="col-sm-4 col-form-label">Confirm:</label>
+    <div class="col-sm-8">
+      <input
+        class="form-control"
+        id="confirm-password"
+        type="password"
+        formControlName="confirmPassword"
+        placeholder="confirm password"
+      >
+    </div>
   </div>
 
   <div class="modal-footer">
-    <button type="button" class="btn btn-light" (click)="resetForm()">Reset</button>
-    <button 
+    <button type="reset" class="btn btn-light" (click)="resetForm()">Reset</button>
+    <button
       type="confirm"
       [disabled]="form.invalid || form.untouched"
       class="btn btn-primary"
