--- a/apps/todos/src/app/modules/search/search.component.html
+++ b/apps/todos/src/app/modules/search/search.component.html
@@ -1,6 +1,6 @@
 <form class="pb-4 d-flex align-items-center" [formGroup]="searchForm">
-  <div class="mr-2">
-    <label class="mr-2" for="searchQuery">Search: </label>
+  <div class="me-2">
+    <label class="me-2" for="searchQuery">Search: </label>
     <input class="form-control" id="searchQuery" type="text" formControlName="search">
   </div>
 </form>
