--- a/apps/todos/src/app/features/todos/components/todo-item/todo-item.component.html
+++ b/apps/todos/src/app/features/todos/components/todo-item/todo-item.component.html
@@ -7,13 +7,13 @@ class="border border-2 rounded p-1 mb-2 bg-light list-group-item"
     <div>
       <button *ngIf="!todo?.ready"
         (click)="checkTodo(); false"
-        class = "btn btn-outline-success mr-2"
+        class = "btn btn-outline-success me-2"
         learningWorkspaceStopPropagation
         ><i class="bi bi-check2-square"></i>
       </button>
       <button 
         (click)="editTodo(); false"
-        class = "btn btn-outline-primary mr-2"
+        class = "btn btn-outline-primary me-2"
         learningWorkspaceStopPropagation
         ><i class="bi bi-pencil"></i>
       </button>
