--- a/apps/todos/src/app/features/todos/containers/todos/todos.component.html
+++ b/apps/todos/src/app/features/todos/containers/todos/todos.component.html
@@ -17,7 +17,7 @@
   </ng-container>
 </ul>
 
-<button class="btn btn-outline-primary mb-2 mr-2" (click)="addTodo()">Add todo</button>
+<button class="btn btn-outline-primary mb-2 me-2" (click)="addTodo()">Add todo</button>
 
 <ng-container *ngIf="openAddEditForm">
   <learning-workspace-add-edit-todo-form
