--- a/apps/todos/src/app/modules/header/header.component.html
+++ b/apps/todos/src/app/modules/header/header.component.html
@@ -1,5 +1,5 @@
 <nav class="d-flex align-items-center p-2">
-  <ul *ngIf="links.length" class="nav mr-auto">
+  <ul *ngIf="links.length" class="nav me-auto">
     <li *ngFor="let link of links" class="nav-item">
       <a [routerLink]="[link.route]" class="nav-link">Go to {{link.description}} page</a>
     </li>
